# fatapi_pet_project

./: .gitignore  README.md  alembic.ini  messages.ini  messages.py  pyproject.toml
alembic/: config.py  env.py
alembic/versions/: 06889393e6dd_adding_region_table.py  3867814eb365_add_field_login_to_user_table.py  5d5a0efe307e_init.py  8030a94084b1_change_user_table.py  879f1cddbbda_creating_table_weather.py  a27fbbde4096_adding_apisource_table.py
logger/: logger.py
src/: config.py  database.py  main.py
src/api/api_source/: models.py  repository.py  router.py  schemas.py  service.py
src/api/user/: models.py  repository.py  router.py  schemas.py  service.py
src/api/weather/: models.py  repository.py  router.py  schemas.py  service.py
src/api/word_stat/: models.py  router.py  schemas.py
src/utils/: dependencies.py  repository.py  requests.py  uow.py
